Get de consulta de la relación jerárquica de un lugar
