# swagger/swagger.yml
@@ -356,6 +356,23 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /relacion_lugares/jerarquia_lugar/{id}:
+    get:
+      tags:
+      - relacion_lugares
+      description: get Jerarquia Lugar by id
+      operationId: RelacionLugaresController.Get Jerarquia Lugar
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{}'
+        "403":
+          description: :id is empty
   /tipo_lugar/:
     get:
       tags:
